--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="navbar is-transparent is-branded" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="#">
-                        <img src="img/logo-white.svg" width="320" height="80">
+                        <img src="img/logo-white.svg" style="height: 12.09px">
                     </a>
 
                     <button class="button navbar-burger" id="mainburger">
