--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="hero-body">
 				<div class="container has-text-centered">
-					<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%">
+					<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
 						<h2 class="subtitle">
 							Build, program, and take home your very own automatic obstacle-avoiding remote control robot!
 						</h2>
@@ -77,12 +77,10 @@
 								Limited spots remain, register now!
 							</strong>
 						</h2>
-					</img>
 				</div>
 				<div class="container has-text-centered is-hidden-mobile">
 					<br/>
-					<img src="img/presentedby_ihs_v2.svg" width="15%">
-					</img>
+					<img src="img/presentedby_ihs_v2.svg" width="15%" />
 				</div>
 			</div>
 		</section>
