Add open graph tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 				<title>
 					Arduino Robotics Camp by Irvington Robotics
 				</title>
+				<meta property="og:title" content="Arduino Robotics Camp by Irvington Robotics" />
+				<meta property="og:type" content="website" />
 				<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 					<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css" rel="stylesheet">
 						<link href="css/index.css" rel="stylesheet">
