--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								July 16 to 26 • Monday-Thursday • 9:00AM-4:00PM
+								July 23 to Aug 2 • Monday-Thursday • 9:00AM-4:00PM
 							</strong>
 						</h2>
 						<h2 class="subtitle">
