Update details for 2019 camp

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								July 23 to Aug 2 • Monday-Thursday • 9:00AM-4:00PM
+								July 15 to July 26 • Monday-Friday • 1:00PM-5:00PM
 							</strong>
 						</h2>
 						<h2 class="subtitle">
@@ -66,7 +66,7 @@
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								5th to 10th Grade Students • Class size of 20 • Register by July 18th
+								10-14 years old • Class size of 15 • Register by July 2nd
 							</strong>
 						</h2>
 						<a class="button is-link is-medium" href="#register" id="volbtn">
@@ -106,7 +106,7 @@
 					Max Class Size
 				</p>
 				<p class="title">
-					20
+					15
 				</p>
 			</div>
 		</div>
@@ -116,7 +116,7 @@
 					Register by
 				</p>
 				<p class="title">
-					July 18th
+					July 2nd
 				</p>
 			</div>
 		</div>
@@ -150,12 +150,12 @@
 							Reading and Drawing Schematic Diagrams
 						</li>
 						<li>
-							Intro to Mechanical and Structural Engineering
+							Intro to Mechanical and Structural Design
 						</li>
 					</ul>
 				</div>
 			</div>
-			<div class="column">
+			<!-- <div class="column">
 				<h1 class="title has-text-white">
 					Equipment Used
 				</h1>
@@ -181,7 +181,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </section>
@@ -219,7 +219,7 @@
 					Camp Tuition
 				</th>
 				<td>
-					$556.02
+					$165.02
 				</td>
 			</tr>
 			<tr>
@@ -227,7 +227,7 @@
 					Kit Cost
 				</th>
 				<td>
-					$63.98
+					$84.98
 				</td>
 			</tr>
 			<tr>
@@ -235,7 +235,7 @@
 					Lunch (optional)
 				</th>
 				<td>
-					$6 per day of camp
+					$8 per day of camp
 				</td>
 			</tr>
 			<tr class="is-selected has-background-info">
@@ -243,7 +243,7 @@
 					Total Tuition
 				</th>
 				<th>
-					$620.00 or $668.00 with lunch
+					$250.00 or $290.00 with lunch
 				</th>
 			</tr>
 		</table>
@@ -263,8 +263,8 @@
 					camp@irvingtonrobotics.org
 				</code>
 				or call
-				<a href="tel:5107095452">
-					(510) 709-5452
+				<a href="tel:5105120863">
+					(510) 512-0863
 				</a>
 				.
 			</h2>
@@ -323,10 +323,10 @@
 				<a href="https://goo.gl/maps/SXCVYp46S9S2">
 					Nurture Kids Warm Springs
 				</a>
-				by July 18th.
+				by July 2nd.
 			</p>
 			<p>
-				The camp is $620.00 without lunch and $668.00 with lunch.
+				The camp is $250.00 without lunch and $290.00 with lunch.
 			</p>
 		</div>
 	</section>
@@ -340,7 +340,7 @@
 				All information, such as student names, addresses, emails, and etc., collected by Irvington Robotics through this website, its constituent links, or in-person will be kept completely confidential unless written consent by a parent or legal guardian is provided.
 			</p>
 			<p>
-				© 2018 Irvington Robotics Academy.
+				© 2019 Irvington Robotics Academy.
 			</p>
 		</div>
 	</footer>
