--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 				<div class="container has-text-centered">
 					<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
 						<h2 class="subtitle">
-							Build, program, and take home your very own automatic obstacle-avoiding remote control robot!
+							Build, program, 3D-model, and take home your very own automatic obstacle-avoiding, object-tracking smartcar!
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								July 15 to July 26 • Monday-Friday • 1:00PM-5:00PM
+								July 15 to July 26 • Monday-Friday • 9:00AM-1:00PM
 							</strong>
 						</h2>
 						<h2 class="subtitle">
@@ -66,7 +66,7 @@
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								10-14 years old • Class size of 15 • Register by July 2nd
+								9-13 years old • Class size of 15 • Register by July 9th
 							</strong>
 						</h2>
 						<a class="button is-link is-medium" href="#register" id="volbtn">
@@ -96,7 +96,7 @@
 					Student-To-Teacher Ratio
 				</p>
 				<p class="title">
-					5:1
+					3:1
 				</p>
 			</div>
 		</div>
@@ -116,7 +116,7 @@
 					Register by
 				</p>
 				<p class="title">
-					July 2nd
+					July 9th
 				</p>
 			</div>
 		</div>
@@ -132,10 +132,13 @@
 				<div>
 					<ul>
 						<li>
-							Arduino Microcontroller Programming
+							C Programming
+						</li>
+            <li>
+							Circuit Design
 						</li>
 						<li>
-							C Programming
+							Arduino Microcontroller Programming
 						</li>
 						<li>
 							Programming Logic and Control Flow
@@ -150,11 +153,15 @@
 							Reading and Drawing Schematic Diagrams
 						</li>
 						<li>
-							Intro to Mechanical and Structural Design
+							Mechanical and Structural Design
+						</li>
+            <li>
+							3D Design with Autodesk and Tinkercad Software
 						</li>
 					</ul>
 				</div>
 			</div>
+      <!-- TODO: Kit Contents -->
 			<!-- <div class="column">
 				<h1 class="title has-text-white">
 					Equipment Used
@@ -189,16 +196,17 @@
 	<div class="container">
 		<h1 class="title has-text-white">
 			About the Instructors
+      <!-- TODO: insert bios-->
 		</h1>
 		<p class="has-text-justified">
-			The camp is taught by VEX Robotics Team Leaders from Irvington Robotics Academy, who have developed a new and engaging curriculum to build fundamental STEAM skills within the robotics competitors of the next generation. Learn more about Irvington Robotics Academy
-			<a href="//blog.irvingtonrobotics.org">
-				on our blog
-			</a>
-			.
+			This camp is taught by VEX Robotics Team captains of the nationally appraised Irvington Robotics Academy. These leaders are skilled in all things robotics through creating internationally recognized maker-faire robotics projects,
+      <!--TODO: post the picture of sai and vasant cnc-->
+      coaching and mentoring younger students through all steps of the robotics design process, and spending countless hours themselves building, modeling, programming, and competing at competitions with teams from around the world.
 		</p>
 		<br/>
+    <!-- TODO: edit flyer photo -->
 		<img src="img/flyer.jpg" width="300" />
+    <!-- TODO: insert Iowa photo -->
 	</div>
 </section>
 <section class="section has-text-centered">
@@ -243,7 +251,7 @@
 					Total Tuition
 				</th>
 				<th>
-					$250.00 or $290.00 with lunch
+					$250.00 or $330.00 with lunch
 				</th>
 			</tr>
 		</table>
@@ -262,7 +270,7 @@
 				<code>
 					camp@irvingtonrobotics.org
 				</code>
-				or call
+        or call
 				<a href="tel:5105120863">
 					(510) 512-0863
 				</a>
@@ -276,7 +284,7 @@
 			</h2>
 			<p>
 				Fill out
-				<a href="https://goo.gl/forms/E4AuH4i7Q7aW3Eb32">
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform?usp=sf_link">
 					this form
 				</a>
 				.
@@ -323,10 +331,10 @@
 				<a href="https://goo.gl/maps/SXCVYp46S9S2">
 					Nurture Kids Warm Springs
 				</a>
-				by July 2nd.
+				by July 9th.
 			</p>
 			<p>
-				The camp is $250.00 without lunch and $290.00 with lunch.
+				The camp is $250.00 without lunch and $330.00 with lunch.
 			</p>
 		</div>
 	</section>
