Add Bios and Equipment
- bit of rearrangment

--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
 				</div>
 			</div>
 		</section>
-	</body>
-</html>
 <section class="section has-text-centered has-text-black">
 	<nav class="level">
 		<div class="level-item has-text-centered">
@@ -122,12 +120,16 @@
 		</div>
 	</nav>
 </section>
+<section class="section has-text-centered is-branded has-text-white">
+    <!-- TODO: edit flyer photo -->
+    <img src="img/flyer.jpg" width="300" />
+</section>
 <section class="section has-text-centered is-branded">
 	<div class="container has-text-white">
 		<div class="columns">
 			<div class="column">
 				<h1 class="title has-text-white">
-					Topics Covered
+					Camp Focuses
 				</h1>
 				<div>
 					<ul>
@@ -161,52 +163,131 @@
 					</ul>
 				</div>
 			</div>
-      <!-- TODO: Kit Contents -->
-			<!-- <div class="column">
-				<h1 class="title has-text-white">
-					Equipment Used
-				</h1>
-				<div>
-					<ul>
-						<li>
-							ULN2003 Stepper Motor Driver Board
-						</li>
-						<li>
-							HC-SR04 Ultrasonic Sensor
-						</li>
-						<li>
-							Arduino Uno R3 Microcontroller
-						</li>
-						<li>
-							LED 1602 Display Module
-						</li>
-						<li>
-							L293D Motor Driver Shield
-						</li>
-						<li>
-							...and many more sensors/boards!
-						</li>
-					</ul>
-				</div>
-			</div> -->
 		</div>
+    <h1 class="title has-text-white">
+      Equipment Used
+    </h1>
+    <img src="img/equipment.jpg" width="300">
+    <div class="columns">
+			<div class="column">
+        <h2 class="subtitle has-text-white">
+          Robot Chassis
+        </h2>
+        <ul>
+          <li>2 x Gear motor (1:48 torque gear ratio)</li>
+          <li>2 x High-quality car wheel</li>
+          <li>1 x Smart car chassis</li>
+          <li>2 x Pan-tilt boards</li>
+          <li>4 x Motor fixing bracket</li>
+          <li>2 x 14500 Li battery</li>
+          <li>1 x Hardware fitting</li>
+          <li>1 x SG90 servo</li>
+          <li>1 x Universal wheel</li>
+        </ul>
+      </div>
+
+      <div class="column">
+        <h2 class="subtitle has-text-white">
+          Microcontroller/Sensor Equipment
+        </h2>
+        <ul>
+          <li>1 x Arduino uno R3</li>
+          <li>3 x 15 Pixel LED Board</li>
+          <li>1 x Ultrasonic sensor  (HC-SR04 Ultrasonic Sensor)</li>
+          <li>1 x Flame sensor</li>
+          <li>2 x Photoresistor & Thermistor</li>
+          <li>3 x Potentiometer</li>
+          <li>1 x LCD1602</li>
+          <li>1 x Mini remote control</li>
+        </ul>
+      </div>
+
+      <div class="column">
+        <h2 class="subtitle has-text-white">
+          Circuit Equipment
+        </h2>
+        <ul>
+          <li>2 x Active buzzer</li>
+          <li>20 x Resistors</li>
+          <li>4 x Button</li>
+          <li>2 x Mini breadboard</li>
+          <li>1 x Battery box</li>
+          <li>1 x Charger</li>
+          <li>1 x Mini component box</li>
+          <li>1 x 830 holes big bread board</li>
+          <li>2 X AA Batteries</li>
+        </ul>
+      </div>
+
+    </div>
 	</div>
 </section>
 <section class="section has-text-centered is-branded has-text-white">
 	<div class="container">
+    <!-- TODO: insert Iowa photo -->
 		<h1 class="title has-text-white">
 			About the Instructors
-      <!-- TODO: insert bios-->
 		</h1>
 		<p class="has-text-justified">
 			This camp is taught by VEX Robotics Team captains of the nationally appraised Irvington Robotics Academy. These leaders are skilled in all things robotics through creating internationally recognized maker-faire robotics projects,
       <!--TODO: post the picture of sai and vasant cnc-->
       coaching and mentoring younger students through all steps of the robotics design process, and spending countless hours themselves building, modeling, programming, and competing at competitions with teams from around the world.
 		</p>
-		<br/>
-    <!-- TODO: edit flyer photo -->
-		<img src="img/flyer.jpg" width="300" />
-    <!-- TODO: insert Iowa photo -->
+    <section class="section">
+      <div class="columns">
+        <!-- <figure class="column is-narrow">
+          <p class="image is-128x128">
+            <img class="is-rounded" src="img/bios/ansh.jpg">
+          </p>
+        </figure> -->
+        <div class="column">
+          <div class="content">
+            <h3 class="has-text-white">
+              Ansh Verma
+            </h3>
+            <p>
+              Hi! I am a junior at Irvington High School, and head of this summer camp. Technology is influencing the world in amazing ways, and I want to get the next generation involved in this process.  As a taekwondo and tennis instructor, I have been helping students reach their physical and mental potential for four years. As a seasoned instructor, I wish to combine my teaching experience with my technological knowledge, and help students in this summer camp learn more about robotics, programming, and 3D design. Through doing/learning from data-analysis programming at a UCSF research lab, and spending countless hours designing/building to compete in national robotics competitions using arduino, and vex hardware/software, I have ample information to teach!
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content">
+            <h3 class="has-text-white">
+              Sandesh Shrestha
+            </h3>
+            <p>
+              Hi! I am a junior at Irvington High School. Through several years of developing and teaching successful coding and robotics projects, I have become professionally fluent in Arduino, Raspberry Pi, and Python. Additionally, in an effort to spread my passion for robotics, I founded an international teaching program that brought the LEGO Mindstorms framework to developing schools. I have become competent in using Linux, Java, and Computer-Aided-Design (CAD) through AutoDesk Inventor. Additionally, I have ample website design experience in HTML and CSS. Through this summer camp, I want to combine the vast technological knowledge I have with my experience teaching robotics and managing teaching programs to help students get interested in technology early! Hobbies include playing guitar, violin, & piano, playing PC games, building custom PCs, and drinking milk tea.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content">
+            <h3 class="has-text-white">
+              Patrick Ding
+            </h3>
+            <p>
+              Hi! My name is Patrick Ding and I am currently a Junior at Irvington High School. I have a lot of experience with arduino and C programming, having made many small projects and taken summer programs on these topics myself. i plan to use the experiences I had as a student to make this year's Irvington Summer Camp better than the programs I took. I am also adept at using Autodesk inventor, an industry standard Computer Aided Design (CAD) software, as I have taken Engineering Design courses and worked with it in my own free time. Through robotics, I have gained experience working with electronics as well.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="content">
+            <h3 class="has-text-white">
+              Vasant Chalemcherla
+            </h3>
+            <p>
+              Hi, I’m Vasant and I am a senior at Irvington High School. Ever since fourth grade I’ve loved robots. I enjoy building and watching how my work plays out. I participated in the FLL competition for three years, FTC for one, and VEX robotics for 3 years, where I am now. Through this extensive robotics experience, 3D modelling and programming has become second nature for me. Envisioning, creating, and building complex designs to complete robotics challenges has made me master all aspects of the design process, and learn a lot about structural/mechanical principles. I hope to teach all I've learned in my robotics experience to students in this summer camp!  In my free time, I can be found reading novels, listening to music, playing tennis, or playing Destiny 2.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 	</div>
 </section>
 <section class="section has-text-centered">
@@ -365,3 +446,5 @@
 		gtag('config', 'UA-112372838-1');
 	</script>
 </hr>
+</body>
+</html>
