Update flyer and add BsCNC

--- a/index.html
+++ b/index.html
@@ -123,12 +123,14 @@
 		</nav>
 	</section>
 	<section class="section has-text-centered is-branded has-text-white">
-		<!-- TODO: edit flyer photo -->
-		<img src="img/flyer.jpg" width="300" />
+
 	</section>
 	<section class="section has-text-centered is-branded">
 		<div class="container has-text-white">
-			<div class="columns">
+			<div class="columns is-vcentered">
+        <div class="column">
+          <img src="img/flyer.jpg" width="500"/>
+        </div>
 				<div class="column">
 					<h1 class="title has-text-white">
 						Camp Curriculum
@@ -139,7 +141,7 @@
 								C Programming
 							</li>
 							<li>
-								Circuit Design
+								Circuit and Schematic Diagram Design
 							</li>
 							<li>
 								Arduino Microcontroller Programming
@@ -166,68 +168,70 @@
 					</div>
 				</div>
 			</div>
-			<h1 class="title has-text-white">
-				Equipment Used
-			</h1>
-			<img src="img/equipment.jpg" width="300">
-			<br><br>
-			<div class="columns">
-				<div class="column">
-					<h2 class="subtitle">
-						<strong class="has-text-white">Robot Chassis</strong>
-					</h2>
-					<ul>
-						<li>2 x Gear Motor (1:48 torque gear ratio)</li>
-						<li>2 x High-quality Car Wheel</li>
-						<li>1 x Smart Car Chassis</li>
-						<li>2 x Pan-Tilt Boards</li>
-						<li>4 x Motor Fixing Bracket</li>
-						<li>2 x 14500 Lithium-Ion Batteries</li>
-						<li>1 x Hardware Set (screws, etc.)</li>
-						<li>1 x SG90 Servo</li>
-						<li>1 x Universal Wheel</li>
-					</ul>
-				</div>
-
-				<div class="column">
-					<h2 class="subtitle">
-						<strong class="has-text-white">Microcontroller/Sensor Equipment</strong>
-					</h2>
-					<ul>
-						<li>1 x Arduino Uno R3</li>
-						<li>3 x 15 Pixel LED Board</li>
-						<li>1 x Ultrasonic Sensor (HC-SR04 Ultrasonic Sensor)</li>
-						<li>1 x Flame Sensor</li>
-						<li>2 x Photoresistor & Thermistor</li>
-						<li>3 x Potentiometer</li>
-						<li>1 x LCD1602</li>
-						<li>1 x Mini Remote Control</li>
-					</ul>
-				</div>
-
-				<div class="column">
-					<h2 class="subtitle">
-						<strong class="has-text-white">Circuit Equipment</strong>
-					</h2>
-					<ul>
-						<li>2 x Active Buzzer</li>
-						<li>20 x Resistors</li>
-						<li>4 x Buttons</li>
-						<li>2 x Mini Breadboards</li>
-						<li>1 x Battery Box</li>
-						<li>1 x Charger</li>
-						<li>1 x Mini Component Box</li>
-						<li>1 x 830-Hole Large Breadboard</li>
-						<li>2 X AA Batteries</li>
-					</ul>
-				</div>
-
-			</div>
 		</div>
 	</section>
+  <section class="section has-text-centered is-branded">
+    <div class="container has-text-white">
+      <h1 class="title has-text-white">
+        Equipment Used
+      </h1>
+      <img src="img/equipment.jpg" width="300">
+      <br><br>
+      <div class="columns">
+        <div class="column">
+          <h2 class="subtitle">
+            <strong class="has-text-white">Robot Chassis</strong>
+          </h2>
+          <ul>
+            <li>2 x Gear Motor (1:48 torque gear ratio)</li>
+            <li>2 x High-quality Car Wheel</li>
+            <li>1 x Smart Car Chassis</li>
+            <li>2 x Pan-Tilt Boards</li>
+            <li>4 x Motor Fixing Bracket</li>
+            <li>2 x 14500 Lithium-Ion Batteries</li>
+            <li>1 x Hardware Set (screws, etc.)</li>
+            <li>1 x SG90 Servo</li>
+            <li>1 x Universal Wheel</li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <h2 class="subtitle">
+            <strong class="has-text-white">Microcontroller/Sensor Equipment</strong>
+          </h2>
+          <ul>
+            <li>1 x Arduino Uno R3</li>
+            <li>3 x 15 Pixel LED Board</li>
+            <li>1 x Ultrasonic Sensor (HC-SR04 Ultrasonic Sensor)</li>
+            <li>1 x Flame Sensor</li>
+            <li>2 x Photoresistor & Thermistor</li>
+            <li>3 x Potentiometer</li>
+            <li>1 x LCD1602</li>
+            <li>1 x Mini Remote Control</li>
+          </ul>
+        </div>
+
+        <div class="column">
+          <h2 class="subtitle">
+            <strong class="has-text-white">Circuit Equipment</strong>
+          </h2>
+          <ul>
+            <li>2 x Active Buzzer</li>
+            <li>20 x Resistors</li>
+            <li>4 x Buttons</li>
+            <li>2 x Mini Breadboards</li>
+            <li>1 x Battery Box</li>
+            <li>1 x Charger</li>
+            <li>1 x Mini Component Box</li>
+            <li>1 x 830-Hole Large Breadboard</li>
+            <li>2 X AA Batteries</li>
+          </ul>
+        </div>
+    </div>
+    </div>
+  </section>
 	<section class="section has-text-centered is-branded has-text-white">
 		<div class="container">
-			<!-- TODO: insert Iowa photo -->
 			<h1 class="title has-text-white">
 				About the Instructors
 			</h1>
@@ -235,12 +239,19 @@
 				This camp is taught by VEX Robotics Team captains of the nationally appraised Irvington Robotics Academy. These
 				leaders are skilled in numerous aspects of robotics through the creation of internationally recognized
 				robotics projects,
-				<!--TODO: post the picture of sai and vasant cnc-->
 				coaching and mentoring younger students through all steps of the robotics design process, and spending countless
 				hours themselves building, modeling, programming, and competing at tournaments with teams from around the
 				world.
 			</p>
-			<section class="section">
+      <div class="columns">
+    		<!-- <div class="column">
+          TODO: insert Iowa photo
+        </div> -->
+        <div class="column">
+          <img src="img/bs-cnc.jpg">
+        </div>
+      </div>
+			<section>
 				<h4 class="title is-4 has-text-white">
 					Ansh Verma
 				</h4>
