Insert bio images

--- a/index.html
+++ b/index.html
@@ -122,9 +122,6 @@
 			</div>
 		</nav>
 	</section>
-	<section class="section has-text-centered is-branded has-text-white">
-
-	</section>
 	<section class="section has-text-centered is-branded">
 		<div class="container has-text-white">
 			<div class="columns is-vcentered">
@@ -256,11 +253,11 @@
 					Ansh Verma
 				</h4>
 				<div class="columns">
-					<!-- <figure class="column is-narrow">
-						<p class="image is-128x128">
+					<figure class="column is-narrow">
+						<p class="image is-128x128 is-hcentered">
 							<img class="is-rounded" src="img/bios/ansh.jpg">
 						</p>
-					</figure> -->
+					</figure>
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
@@ -280,6 +277,11 @@
 					Sandesh Shrestha
 				</h4>
 				<div class="columns">
+          <figure class="column is-narrow">
+						<p class="image is-128x128 is-hcentered">
+							<img class="is-rounded" src="img/bios/sandesh.jpg">
+						</p>
+					</figure>
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
@@ -300,6 +302,11 @@
 					Patrick Ding
 				</h4>
 				<div class="columns">
+          <figure class="column is-narrow">
+						<p class="image is-128x128 is-hcentered">
+							<img class="is-rounded" src="img/bios/patrick.jpg">
+						</p>
+					</figure>
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
@@ -318,6 +325,11 @@
 					Vasant Chalemcherla
 				</h4>
 				<div class="columns">
+          <figure class="column is-narrow">
+						<p class="image is-128x128 is-hcentered">
+							<img class="is-rounded" src="img/bios/vasant.jpg">
+						</p>
+					</figure>
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
