Update registration packet
still has problems:
  - start date on page 2 is wrong
  - waiver on page 5 is applicable to the wrong dates

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 			</h2>
 			<p>
 				Fill out
-				<a href="https://drive.google.com/file/d/1hgum5CfsaiVwIbIBpPBbUb4Kc1gRaOHn/view?usp=sharing">
+				<a href="assets/Arduino-Robotics-Registration-Packet-2019.pdf">
 					this registration packet</a>.
 			</p>
 			<p>
