--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								C Programming
 							</li>
 							<li>
-								Circuit and Schematic Diagram Design
+								Circuit Design
 							</li>
 							<li>
 								Arduino Microcontroller Programming
@@ -292,7 +292,7 @@
 								using Linux, Java, and Computer-Aided-Design (CAD) through Autodesk Inventor. Additionally, I have ample
 								website design experience in HTML and CSS. Through this summer camp, I want to combine the vast
 								technological knowledge I have with my experience teaching robotics and managing teaching programs to
-								help students get interested in technology early! Hobbies include playing guitar, violin, & piano,
+								help students get interested in technology at a young age! Hobbies include playing guitar, violin, & piano,
 								playing PC games, building custom PCs, and drinking milk tea.
 							</p>
 						</div>
